# alerthood

./: .gitignore  AGENTS.md  DEPLOY.md  README.md  wrangler.toml
.github/workflows/: ci.yml  deploy-frontend.yml
backend/: .env.example  auth.py  config.py  db.py  main.py  pyproject.toml  reingest_boundaries.py  requirements.txt
backend/models/: schemas.py
backend/routers/: areas.py  events.py  neighborhoods.py  routes.py  scores.py
backend/services/: ai_extractor.py  article_fetcher.py  bg_news_scraper.py  boundary_ingestion.py  emsc_scraper.py  gdacs_scraper.py  geocoding.py  gnews_scraper.py  historical_import.py  insert_events.py  meteoalarm_scraper.py  neighborhood_scores.py  nws_scraper.py  openweather_scraper.py  overpass.py  route_engine.py  safety_score.py  scraper.py  uk_police_scraper.py  usgs_scraper.py
backend/tests/: conftest.py  test_ai_extractor.py  test_article_fetcher.py  test_bg_news_scraper.py  test_geocoding.py  test_gnews_scraper.py  test_overpass.py
design/alerthood_map_view/: code.html
design/alerthood_neo_noir/: DESIGN.md
design/alerthood_profile_tab/: code.html
design/alerthood_threat_feed/: code.html
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
frontend/src/: App.tsx  index.css  main.tsx
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql  002_events_with_coords_and_bbox.sql  003_neighborhood_scores.sql  20260328181925_add_profiles_insert_policy.sql  20260328185834_cleanup_bad_profile_rows.sql  20260329_area_bbox_rpc.sql  (+21 more)
tasks/: lessons.md  todo.md
(+46 files in other folders)
