[project]
name = "alerthood-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.115.0",
    "supabase==2.9.1",
    "PyJWT[crypto]==2.9.0",
    "pydantic-settings==2.5.2",
    "httpx==0.27.2",
    "geopy==2.4.1",
    "feedparser>=6.0.12",
    "openai>=1.30.0",
    "trafilatura>=1.12.0",
]

[tool.fastapi]
entrypoint = "main:app"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]
